[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.5
margin_top = -300.0
margin_right = 67.5
margin_bottom = 300.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 135.0
margin_bottom = 280.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start"

[node name="CreditButton" type="Button" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 135.0
margin_bottom = 310.0
text = "Credit"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 320.0
margin_right = 135.0
margin_bottom = 340.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditButton" to="." method="_on_CreditButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
